[package]
name = "recite-util"
version = "0.1.1"
edition = "2021"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Reciting helper with database."
documentation = "https://github.com/misaka10987/recite-util"
homepage = "https://github.com/misaka10987/recite-util"
repository = "https://github.com/misaka10987/recite-util"
readme = "README.md"
keywords = ["recite", "util", "learn", "tool"]
license = "GPL-3.0-only"

[dependencies]
clearscreen = "3.0.0"
csv = { version = "1.3.0" }
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
